perf: consultas em lote, paginacao opcional e janela no job de cobranca
Itens 10 a 14 da revisao.

N+1. Toda listagem montava cada turno com um COUNT proprio de inscricoes:
N turnos, N+1 consultas. O TurnoMapper ganhou versao em lote (uma contagem
agrupada para a lista inteira) e as listagens passam por ela. Junto:
- "turnos do entregador" era ate quatro consultas mais um findById por
  inscricao; virou uma (findDoEntregador, com o UNION feito no banco);
- conflito de agenda era um findById por inscricao ativa dentro de um laco;
  virou existeConflitoDeAgenda, uma pergunta so;
- listarInscritos buscava o nome de cada inscrito; agora e um findAllById;
- o job de cobranca buscava as inscricoes turno a turno;
- dashboard do lojista, relatorio do lojista e avaliacoes recebidas faziam
  findById por turno/avaliacao para pegar score e nome.

NOTA FISCAL. pendentes() consultava nota e nome por item; agora sao tres
consultas no total. E corrige um bug que o N+1 escondia: o filtro de
inscricoes olhava so ACEITO, mas finalizar o turno muda as inscricoes para
FINALIZADO — o lojista voltava a ver so o entregador principal, e quem
entrou por vaga extra nunca via a propria pendencia.

PAGINACAO. Contrato unico (?pagina=&tamanho=), total no header
X-Total-Count (exposto no CORS). Sem "pagina", tudo continua vindo inteiro —
o app em producao nao manda os parametros. Vale para turnos (por lojista,
por entregador, disponiveis), extrato e notificacoes; nas notificacoes o
teto de 50 do findTop50 passa a valer tambem para as nao lidas, que vinham
sem limite. Os filtros que rodam em memoria sao fatiados depois do filtro,
e isso esta dito no codigo.

JOB DE COBRANCA. Rodava sobre todo turno ACEITO/EM_ANDAMENTO com fim no
passado. Como nada tira o turno desse estado sem um humano finalizar, o
conjunto so crescia e era reprocessado a cada 5 min para sempre. Agora a
janela e de 7 dias.

REPLICAS. Os tres @Scheduled rodam em toda instancia. Enquanto nao houver
lock distribuido, a saida esta e